--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
             <img src="photo/IMG_4980.JPG" alt="Second slide">
         </div>
         <div class="item">
-            <img src="photo/IMG_4930.JPG" alt="Third slide">
+            <img src="photo/IMG_4930.jpg" alt="Third slide">
         </div>
     </div>
 </div><!-- /.carousel -->
